--- a/robodog-esp/main/CMakeLists.txt
+++ b/robodog-esp/main/CMakeLists.txt
@@ -1,8 +1,13 @@
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 idf_component_register(
     SRCS 
         "main.c"
-        "leg.cpp"
-        "pca9685.cpp" 
+        "src/leg.cpp"
+        "src/pca9685.cpp" 
+        "src/legWrapper.cpp"
+        "src/pca9685Wrapper.cpp"
+
     INCLUDE_DIRS 
         "include"
     REQUIRES 
