--- a/robodog-esp/main/CMakeLists.txt
+++ b/robodog-esp/main/CMakeLists.txt
@@ -9,6 +9,7 @@ idf_component_register(
         "src/globals.c"
         "src/servoPCAWrapper.cpp"
         "src/web.c"
+        "src/inits.c"
     INCLUDE_DIRS 
         "include"
     REQUIRES 
